tests/negative/typecheck/catch.orng
fn main() -> Int {
    let x: ()!Char = .ok('4')
    x catch 4
}